Fixes in progress

--- a/dentko/doctor.html
+++ b/dentko/doctor.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section class="about about_doctor">
             <div class="uk-container">
                 <div class="uk-section">
                     <div class="uk-flex uk-flex-between about__container">
@@ -207,16 +207,6 @@
                                         <div class="swiper-slide">
                                             <a class="uk-inline" href="./img/big-sert3.png" data-caption="Caption 1">
                                                 <img src="./img/sertificate3.png" alt="" class="about__slider-img">
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a class="uk-inline" href="./img/benefit1.png" data-caption="Caption 1">
-                                                <img src="./img/sertificate1.png" alt="" class="about__slider-img">
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a class="uk-inline" href="./img/big-sert2.png" data-caption="Caption 1">
-                                                <img src="./img/sertificate2.png" alt="" class="about__slider-img">
                                             </a>
                                         </div>
                                     </div>
