--- a/dentko/service.html
+++ b/dentko/service.html
@@ -524,7 +524,7 @@
                     </div>
                     <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@m uk-grid">
                         <li>
-                            <div class="uk-card uk-card-default">
+                            <div class="uk-card uk-card-default service__front">
                                 <div class="uk-card-body">
                                     <h3 class="uk-card-title">Ленчение</h3>
                                 </div>
@@ -532,9 +532,21 @@
                                     <img src="./img/service1.png" alt="">
                                 </div>
                             </div>
+                            <div class="uk-card uk-card-default service__back">
+                                <h3 class="uk-card-title">Ленчение</h3>
+                                <div class="service__links">
+                                    <a href="#" class="service__link">Лечение пульпита</a>
+                                    <a href="#" class="service__link">Детская стоматология</a>
+                                    <a href="#" class="service__link">Лечение каналов</a>
+                                    <a href="#" class="service__link">Лечение корня зуба</a>
+                                    <a href="#" class="service__link">Лечение зубов под микроскопом</a>
+                                    <a href="#" class="service__link">Лечение зубов иностранным гражданам</a>
+                                    <a href="#" class="service__link">Центр эстетической стоматологии</a>
+                                </div>
+                            </div>
                         </li>
                         <li>
-                            <div class="uk-card uk-card-default">
+                            <div class="uk-card uk-card-default service__front">
                                 <div class="uk-card-body">
                                     <h3 class="uk-card-title">Протезирование</h3>
                                 </div>
@@ -542,9 +554,27 @@
                                     <img src="./img/service2.png" alt="">
                                 </div>
                             </div>
+                            <div class="uk-card uk-card-default service__back">
+                                <h3 class="uk-card-title">Протезирование</h3>
+                                <div class="service__links">
+                                    <a href="#" class="service__link">Протезирование зубов</a>
+                                    <a href="#" class="service__link">Реставрация зубов</a>
+                                    <a href="#" class="service__link">Съемные зубные протезы</a>
+                                    <a href="#" class="service__link">Бюгельное протезирование</a>
+                                    <a href="#" class="service__link">Ремонт зубных протезов</a>
+                                    <a href="#" class="service__link">Люминиры</a>
+                                    <a href="#" class="service__link">Компониры</a>
+                                    <a href="#" class="service__link">Керамические виниры</a>
+                                    <a href="#" class="service__link">Безметалловая керамика</a>
+                                    <a href="#" class="service__link">Металлокерамические коронки</a>
+                                    <a href="#" class="service__link">Пластмассовый протез для зубов</a>
+                                    <a href="#" class="service__link">Нейлоновые протезы</a>
+                                    <a href="#" class="service__link">Зубной мост</a>
+                                </div>
+                            </div>
                         </li>
                         <li>
-                            <div class="uk-card uk-card-default">
+                            <div class="uk-card uk-card-default service__front">
                                 <div class="uk-card-body">
                                     <h3 class="uk-card-title">Хирургия</h3>
                                 </div>
@@ -552,9 +582,21 @@
                                     <img src="./img/service3.png" alt="">
                                 </div>
                             </div>
+                            <div class="uk-card uk-card-default service__back">
+                                <h3 class="uk-card-title">Хирургия</h3>
+                                <div class="service__links">
+                                    <a href="#" class="service__link">Имплантация зубов (импланты)</a>
+                                    <a href="#" class="service__link">Наращивание костной ткани</a>
+                                    <a href="#" class="service__link">Стоматологическая хирургия</a>
+                                    <a href="#" class="service__link">Удаление зуба мудрости</a>
+                                    <a href="#" class="service__link">Удаление зубов</a>
+                                    <a href="#" class="service__link">Удаление зубов у детей</a>
+                                    <a href="#" class="service__link">Пластика уздечки языка</a>
+                                </div>
+                            </div>
                         </li>
                         <li>
-                            <div class="uk-card uk-card-default">
+                            <div class="uk-card uk-card-default service__front">
                                 <div class="uk-card-body">
                                     <h3 class="uk-card-title">Ортодонтия</h3>
                                 </div>
@@ -562,44 +604,116 @@
                                     <img src="./img/service4.png" alt="">
                                 </div>
                             </div>
+                            <div class="uk-card uk-card-default service__back">
+                                <h3 class="uk-card-title">Ортодонтия</h3>
+                                <div class="service__links">
+                                    <a href="#" class="service__link">Установка брекет-систем</a>
+                                    <a href="#" class="service__link">Металлические брекеты</a>
+                                    <a href="#" class="service__link">Сапфировые брекеты</a>
+                                    <a href="#" class="service__link">Самолигирующие брекеты</a>
+                                    <a href="#" class="service__link">Керамические брекеты</a>
+                                    <a href="#" class="service__link">Брекеты Damon</a>
+                                    <a href="#" class="service__link">Услуги ортодонта в Минске</a>
+                                    <a href="#" class="service__link">Детский ортодонт</a>
+                                    <a href="#" class="service__link">Трейнеры для зубов</a>
+                                </div>
+                            </div>
                         </li>
                         <li>
-                            <div class="uk-card uk-card-default">
+                            <div class="uk-card uk-card-default service__front">
                                 <div class="uk-card-body">
-                                    <h3 class="uk-card-title">Media Bottom</h3>
+                                    <h3 class="uk-card-title">Отбеливание</h3>
                                 </div>
                                 <div class="uk-card-media-bottom">
                                     <img src="./img/service1.png" alt="">
                                 </div>
                             </div>
+                            <div class="uk-card uk-card-default service__back">
+                                <h3 class="uk-card-title">Отбеливание</h3>
+                                <div class="service__links">
+                                    <a href="#" class="service__link">Отбеливание зубов</a>
+                                    <a href="#" class="service__link">Офисное отбеливание зубов</a>
+                                    <a href="#" class="service__link">Отбеливание зубов капами</a>
+                                    <a href="#" class="service__link">Домашнее отбеливание зубов</a>
+                                </div>
+                            </div>
                         </li>
                         <li>
-                            <div class="uk-card uk-card-default">
+                            <div class="uk-card uk-card-default service__front">
                                 <div class="uk-card-body">
-                                    <h3 class="uk-card-title">Media Bottom</h3>
+                                    <h3 class="uk-card-title">Профилактика</h3>
+                                </div>
+                                <div class="uk-card-media-bottom">
+                                    <img src="./img/service1.png" alt="">
+                                </div>
+                            </div>
+                            <div class="uk-card uk-card-default service__back">
+                                <h3 class="uk-card-title">Профилактика</h3>
+                                <div class="service__links">
+                                    <a href="#" class="service__link">Профессиональная чистка зубов и профилактика</a>
+                                    <a href="#" class="service__link">Герметизация фиссур</a>
+                                    <a href="#" class="service__link">Ультразвуковая чистка</a>
+                                    <a href="#" class="service__link">Профессиональная гигиена полости рта</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="uk-card uk-card-default service__front">
+                                <div class="uk-card-body">
+                                    <h3 class="uk-card-title">Пародонтология</h3>
                                 </div>
                                 <div class="uk-card-media-bottom">
                                     <img src="./img/service2.png" alt="">
                                 </div>
                             </div>
+                            <div class="uk-card uk-card-default service__back">
+                                <h3 class="uk-card-title">Пародонтология</h3>
+                                <div class="service__links">
+                                    <a href="#" class="service__link">Пародонтология</a>
+                                    <a href="#" class="service__link">Лечение пародонтита</a>
+                                    <a href="#" class="service__link">Лечение гингивита</a>
+                                    <a href="#" class="service__link">Лечение пародонтоза</a>
+                                    <a href="#" class="service__link">Шинирование зубов в Минске</a>
+                                </div>
+                            </div>
                         </li>
                         <li>
-                            <div class="uk-card uk-card-default">
+                            <div class="uk-card uk-card-default service__front">
                                 <div class="uk-card-body">
-                                    <h3 class="uk-card-title">Media Bottom</h3>
+                                    <h3 class="uk-card-title">Косметология</h3>
                                 </div>
                                 <div class="uk-card-media-bottom">
                                     <img src="./img/service3.png" alt="">
                                 </div>
                             </div>
+                            <div class="uk-card uk-card-default service__back">
+                                <h3 class="uk-card-title">Косметология</h3>
+                                <div class="service__links">
+                                    <a href="#" class="service__link">Терапевтическая косметология</a>
+                                    <a href="#" class="service__link">Контурная пластика</a>
+                                    <a href="#" class="service__link">Пилинг</a>
+                                    <a href="#" class="service__link">Косметологическая клиника Дентко</a>
+                                    <a href="#" class="service__link">Массаж лица</a>
+                                    <a href="#" class="service__link">Чистка лица</a>
+                                    <a href="#" class="service__link">Микротоки для лица</a>
+                                    <a href="#" class="service__link">Ультразвуковая чистка лица</a>
+                                </div>
+                            </div>
                         </li>
                         <li>
-                            <div class="uk-card uk-card-default">
+                            <div class="uk-card uk-card-default service__front">
                                 <div class="uk-card-body">
-                                    <h3 class="uk-card-title">Media Bottom</h3>
+                                    <h3 class="uk-card-title">Диагностика</h3>
                                 </div>
                                 <div class="uk-card-media-bottom">
                                     <img src="./img/service4.png" alt="">
+                                </div>
+                            </div>
+                            <div class="uk-card uk-card-default service__back">
+                                <h3 class="uk-card-title">Диагностика</h3>
+                                <div class="service__links">
+                                    <a href="#" class="service__link">Панорамный снимок зубов</a>
+                                    <a href="#" class="service__link">3D компьютерная томография зубов</a>
                                 </div>
                             </div>
                         </li>
