--- a/verter_app/second.html
+++ b/verter_app/second.html
@@ -13,7 +13,9 @@
         <div class="container">
             <div class="header__wrap">
                 <a href="./index.html" class="header__back">Назад</a>
-                <span class="header__pagename">Расходный ордер на товар</span>
+                <div class="header__data">
+                    <span class="header__order-name">Заказ на приход</span>
+                </div>
                 <button class="header__menu open_menu"><span></span></button>
             </div>
         </div>
