--- a/verter_app/sixth.html
+++ b/verter_app/sixth.html
@@ -13,7 +13,11 @@
         <div class="container">
             <div class="header__wrap">
                 <a href="./index.html" class="header__back">Назад</a>
-                <span class="header__pagename">Заказ на приход № 118 081 200 122 от 18.03.2020</span>
+                <div class="header__data">
+                    <span class="header__order-name">Заказ на приход</span>
+                    <span class="header__order-number">№ 118 081 200 122</span>
+                    <span class="header__order-date">от 18.03.2020</span>
+                </div>
                 <button class="header__menu open_menu"><span></span></button>
             </div>
         </div>
