--- a/dom/index.html
+++ b/dom/index.html
@@ -64,22 +64,31 @@
             <div class="swiper-container banner__slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="./img/banner1.jpg" alt="">
+                        <img src="./img/banner1.jpg" alt="Школа">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner2.jpg" alt="">
+                        <img src="./img/banner2.jpg" alt="Завод">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner3.jpg" alt="">
+                        <img src="./img/banner3.jpg" alt="Гостинница">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner4.jpg" alt="">
+                        <img src="./img/banner4.jpg" alt="Деревня">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner5.jpg" alt="">
+                        <img src="./img/banner5.jpg" alt="Деревня">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner6.jpg" alt="">
+                        <img src="./img/banner6.jpg" alt="Котеддж">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./img/banner7.jpg" alt="Администрация">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./img/banner8.jpg" alt="Ресторан">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./img/banner9.jpg" alt="АЗС">
                     </div>
                 </div>
             </div>
@@ -124,40 +133,58 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="subslider__item">
-                                    <img src="./img/swiper1.jpg" alt="" class="subslider__img">
+                                    <img src="./img/swiper1.jpg" alt="Школа" class="subslider__img">
                                     <h3 class="subslider__title">Для школ и детских садов</h3>
-                                    <span class="subslider__span">образовательных учерждения</span>
+                                    <span class="subslider__span">образовательных учрждений</span>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="subslider__item">
-                                    <img src="./img/swiper2.jpg" alt="" class="subslider__img">
+                                    <img src="./img/swiper2.jpg" alt="Завод" class="subslider__img">
                                     <h3 class="subslider__title">Для заводов и производственных помещений</h3>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="subslider__item">
-                                    <img src="./img/swiper3.jpg" alt="" class="subslider__img">
+                                    <img src="./img/swiper3.jpg" alt="Гостинница" class="subslider__img">
                                     <h3 class="subslider__title">Для гостиниц, отелей и кемпингов</h3>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="subslider__item">
-                                    <img src="./img/swiper4.jpg" alt="" class="subslider__img">
+                                    <img src="./img/swiper4.jpg" alt="Деревня" class="subslider__img">
                                     <h3 class="subslider__title">Для сельских и городских поселений</h3>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="subslider__item">
-                                    <img src="./img/swiper5.jpg" alt="" class="subslider__img">
+                                    <img src="./img/swiper5.jpg" alt="Котеддж" class="subslider__img">
                                     <h3 class="subslider__title">Для коттеджей и жилых комплексов </h3>
                                     <span class="subslider__span">многквартирные дома</span>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="subslider__item">
-                                    <img src="./img/swiper6.jpg" alt="" class="subslider__img">
+                                    <img src="./img/swiper6.jpg" alt="Администрация" class="subslider__img">
+                                    <h3 class="subslider__title">Для административных зданий и сооружений</h3>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="subslider__item">
+                                    <img src="./img/swiper7.jpg" alt="Ресторан" class="subslider__img">
                                     <h3 class="subslider__title">Для ресторанов, кафе и столовых</h3>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="subslider__item">
+                                    <img src="./img/swiper8.jpg" alt="АЗС" class="subslider__img">
+                                    <h3 class="subslider__title">Для автомоек и АЗС</h3>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="subslider__item">
+                                    <img src="./img/swiper9.jpg" alt="База отдыха" class="subslider__img">
+                                    <h3 class="subslider__title">Для баз отдыха, тур-баз, саун и бань общественных и т.д.</h3>
                                 </div>
                             </div>
                         </div>
@@ -212,6 +239,12 @@
                             <ul class="advantages__list">
                                 <li class="advantages__item"><span class="text_bold">Предустановленный блок доочистки на капельном биофильтре</span> (на моделях производительностью от 20 м3/сутки доочистка производится также на сорбционном фильтре) + использование УФ-обеззараживания дают возможность осуществлять сброс очищенных сточных вод в водоемы рыбохозяйственного назначения!</li>
                                 <li class="advantages__item"><span class="text_bold">Дополнительный запас прочности корпуса</span> позволяет монтировать данное оборудование в любых климатических и геологических условиях.</li>
+                                <li class="advantages__item">Станция <span class="text_bold">не требовательна</span> к качественному составу поступающих на очистку стоков.</li>
+                                <li class="advantages__item">Для предварительной механической очистки поступающих на очистку сточных вод предустановлена <span class="text_bold">съемная корзина</span></li>
+                                <li class="advantages__item">Применены <span class="text_bold">модернизированные системы аэрации,</span> полностью исключающие потери воздуха.</li>
+                                <li class="advantages__item">Приборный отсек станций производительностью до 2,4 м3/сутки <span class="text_bold">выполнен съемным для удобства обслуживания.</span></li>
+                                <li class="advantages__item"><span class="text_bold">Надежность работы</span> обеспечивают герметичный корпус блока управления, герметичные тумблеры и гермовводы.</li>
+                                <li class="advantages__item">В станциях применяется <span class="text_bold">новые системы контроля работы,</span> реагирующая не только на увеличение уровня в емкостях, но и на изменение давления в воздушной системе.</li>
                             </ul>
                         </div>
                         <div class="advantages__link-wrap">
@@ -230,10 +263,10 @@
                         <div class="services__swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide service">
-                                    <img src="./img/service1.png" alt="Монтаж полного цикла" class="service__img">
+                                    <img src="./img/service2.png" alt="продажа Оборудования" class="service__img">
                                     <div class="service__body">
-                                        <h3 class="service__title text_ttu text_tac">Монтаж полного цикла</h3>
-                                        <p class="service__text text_tac">и подключение автономной канализации «под ключ», услуги шеф-монтажа.</p>
+                                        <h3 class="service__title text_ttu text_tac">Подбор решения</h3>
+                                        <p class="service__text text_tac">и индивидуальный подход к каждому заказчику.</p>
                                     </div>
                                 </div>
                                 <div class="swiper-slide service">
@@ -241,6 +274,13 @@
                                     <div class="service__body">
                                         <h3 class="service__title text_ttu text_tac">продажа Оборудования</h3>
                                         <p class="service__text text_tac">и комплектующих: септиков и станций биологической очистки.</p>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide service">
+                                    <img src="./img/service1.png" alt="Монтаж полного цикла" class="service__img">
+                                    <div class="service__body">
+                                        <h3 class="service__title text_ttu text_tac">Монтаж полного цикла</h3>
+                                        <p class="service__text text_tac">и подключение автономной канализации «под ключ», услуги шеф-монтажа.</p>
                                     </div>
                                 </div>
                                 <div class="swiper-slide service">
@@ -283,6 +323,7 @@
                                             <option value="Игровая площадка или атракционы">Игровая площадка или атракционы</option>
                                             <option value="Другой объект">Другой объект</option>
                                         </select>
+                                        <a class="form__arrow" href=""></a>
                                     </div>
                                 </label>
                                 <label class="form__label">
@@ -293,6 +334,7 @@
                                             <option value="Только монтаж вашего оборудования">Только монтаж вашего оборудования</option>
                                             <option value="Монтаж нашего оборудования «под ключ»">Монтаж нашего оборудования «под ключ»</option>
                                         </select>
+                                        <a class="form__arrow" href=""></a>
                                     </div>
                                 </label>
                                 <label class="form__label">
@@ -304,6 +346,7 @@
                                             <option value="До 3-ех месяцев">До 3-ех месяцев</option>
                                             <option value="В этом году">В этом году</option>
                                         </select>
+                                        <a class="form__arrow" href=""></a>
                                     </div>
                                 </label>
                             </div>
@@ -324,10 +367,17 @@
                                                 <option value="До 1 млн руб">До 1 млн руб</option>
                                                 <option value="Более 1 млн руб">Более 1 млн руб</option>
                                             </select>
+                                            <a class="form__arrow" href=""></a>
                                         </div>
                                     </label>
                                     <button class="button button_orange open-calculate" type="submit">Расчитать стоимость</button>
                                 </div>
+                            </div>
+                            <div class="form__row form__row_nomt">
+                                <label class="banner__label">
+                                    <input type="checkbox" name="agreement" required>
+                                    <span class="text_black">Согласен на обработку персональных данных</span>
+                                </label>
                             </div>
                         </form>
                     </div>
@@ -344,19 +394,22 @@
                         <div class="docs__swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="./img/doc1.png" alt="Фото документа" class="docs__img">
+                                    <img src="./img/sert1.jpg" alt="Фото документа" class="docs__img">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./img/doc2.png" alt="Фото документа" class="docs__img">
+                                    <img src="./img/sert2.jpg" alt="Фото документа" class="docs__img">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./img/doc3.png" alt="Фото документа" class="docs__img">
+                                    <img src="./img/sert3.jpg" alt="Фото документа" class="docs__img">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./img/doc1.png" alt="Фото документа" class="docs__img">
+                                    <img src="./img/sert4.jpg" alt="Фото документа" class="docs__img">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./img/doc2.png" alt="Фото документа" class="docs__img">
+                                    <img src="./img/sert5.jpg" alt="Фото документа" class="docs__img">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="./img/sert6.jpg" alt="Фото документа" class="docs__img">
                                 </div>
                             </div>
                         </div>
@@ -373,7 +426,15 @@
         <section class="partners">
             <div class="container">
                 <div class="partners__wrap">
-                    <img class="partners__img" src="./img/partners.png" alt="Наши партнеры">
+                    <img class="partners__img" src="./img/partner1.png" alt="Наши партнеры">
+                    <img class="partners__img" src="./img/partner2.png" alt="Наши партнеры">
+                    <img class="partners__img" src="./img/partner3.png" alt="Наши партнеры">
+                    <img class="partners__img" src="./img/partner4.png" alt="Наши партнеры">
+                    <img class="partners__img" src="./img/partner5.png" alt="Наши партнеры">
+                    <img class="partners__img" src="./img/partner6.png" alt="Наши партнеры">
+                    <img class="partners__img" src="./img/partner7.jpg" alt="Наши партнеры">
+                    <img class="partners__img" src="./img/partner8.png" alt="Наши партнеры">
+                    <img class="partners__img" src="./img/partner9.png" alt="Наши партнеры">
                 </div>
             </div>
         </section>
