--- a/dentko/service.html
+++ b/dentko/service.html
@@ -103,6 +103,26 @@
             </ul>
         </div>
     </nav>
+    <div class="appointment">
+        <div class="uk-container">
+            <div class="uk-container">
+                <div class="uk-flex uk-flex-column uk-flex-middle">
+                    <div class="uk-inline">
+                        <span class="header__dropdown"><a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a></span>
+                        <div class="header__dropdown-container" uk-dropdown>
+                            <a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a>
+                            <a href="tel:+375336601313" class="footer__dd-link"><img src="./img/operator2.png">+375 (33) 660-13-13</a>
+                            <a href="tel:+375251101212" class="footer__dd-link"><img src="./img/operator3.png">+375 (25) 110-12-12</a>
+                            <a href="tel:+375172844511" class="footer__dd-link"><img src="./img/operator4.png">+375 (17) 284-45-11</a>
+                        </div>
+                    </div>
+                    <div class="about__btn-wrap appointment__btn-wrap">
+                        <button class="uk-button uk-button-default button about__btn appointment__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="mobile-menu"></div>
     <main class="main">
         <section class="beradcrumbs">
@@ -305,7 +325,7 @@
                     <ul class="uk-slider-items uk-child-width-1-1 doctors__slider">
                         <li class="uk-position-relative uk-flex uk-flex-bottom uk-child-width-1-2 doctor">
                             <div class="uk-flex uk-flex-column uk-flex-left uk-flex-between doctor__data">
-                                <h3 class="uk-text-bold uk-position-relative doctor__name">Дубина<br>Иван Владимирович</h3>
+                                <h3 class="uk-text-bold uk-position-relative doctor__name">Дубина <br>Иван Владимирович</h3>
                                 <div class="doctor__bottom">
                                     <span class="uk-text doctor__specialty">врач-стоматолог-ортопед</span>
                                     <a href="#" class="green-link doctor__link">Подробнее</a>
@@ -324,7 +344,7 @@
                         </li>
                         <li class="uk-position-relative uk-flex uk-flex-bottom uk-child-width-1-2 doctor">
                             <div class="uk-flex uk-flex-column uk-flex-between doctor__data">
-                                <h3 class="uk-text-bold uk-position-relative doctor__name">Дубина<br>Иван Владимирович</h3>
+                                <h3 class="uk-text-bold uk-position-relative doctor__name">Дубина <br>Иван Владимирович</h3>
                                 <span class="uk-text doctor__specialty">врач-стоматолог-ортопед</span>
                                 <a href="#" class="green-link doctor__link">Подробнее</a>
                             </div>
@@ -341,7 +361,7 @@
                         </li>
                         <li class="uk-position-relative uk-flex uk-flex-bottom uk-child-width-1-2 doctor">
                             <div class="uk-flex uk-flex-column uk-flex-between doctor__data">
-                                <h3 class="uk-text-bold uk-position-relative doctor__name">Дубина<br>Иван Владимирович</h3>
+                                <h3 class="uk-text-bold uk-position-relative doctor__name"> <br>Иван Владимирович</h3>
                                 <span class="uk-text doctor__specialty">врач-стоматолог-ортопед</span>
                                 <a href="#" class="green-link doctor__link">Подробнее</a>
                             </div>
