--- a/dentko/index.html
+++ b/dentko/index.html
@@ -247,7 +247,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section class="about no-overflow">
             <div class="uk-container">
                 <div class="uk-section">
                     <div class="uk-grid-match uk-child-width-1-1@s uk-child-width-1-2@m" uk-grid>
@@ -910,7 +910,7 @@
     <div class="popup__wrapper popup-request">
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
-            <div class="popup__body">
+            <form class="popup__body">
                 <h2 class="uk-h1">Записаться на прием</h2>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
@@ -925,7 +925,7 @@
                     <div class="uk-input form__div">
                         <input class="uk-input" type="email" name="mail" placeholder="Ваш e-mail">
                         <div class="popup__info">
-                            <img src="./img/popup-info.svg" alt="" class="popup__info-img">
+                            <img src="/dentko/img/popup-info.svg" alt="" class="popup__info-img">
                             <div class="popup__info-card">
                                 <p>Email служит для оповещения об ответе, он не будет опубликован на сайте.</p>
                                 <p>Не является обязательным полем для заполнения</p>
@@ -938,9 +938,9 @@
                     <textarea class="uk-input" rows="2" name="comment" placeholder="Что вас беспокоит?"></textarea>
                 </div>
                 <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
-                    <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                    <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="/dentko/img/inline-arrow-w.svg"></button>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
     <div class="popup__wrapper popup-sucsess">
