--- a/dentko/reviews/reviews.html
+++ b/dentko/reviews/reviews.html
@@ -108,16 +108,16 @@
             <div class="uk-container">
                 <div class="uk-flex uk-flex-column uk-flex-middle">
                     <div class="uk-inline">
-                        <span class="header__dropdown"><a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a></span>
+                        <span class="header__dropdown"><a href="tel:+375291101212" class="footer__dd-link"><img src="/dentko/img/operator1.png">+375 (29) 110-12-12</a></span>
                         <div class="header__dropdown-container" uk-dropdown>
-                            <a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a>
-                            <a href="tel:+375336601313" class="footer__dd-link"><img src="./img/operator2.png">+375 (33) 660-13-13</a>
-                            <a href="tel:+375251101212" class="footer__dd-link"><img src="./img/operator3.png">+375 (25) 110-12-12</a>
-                            <a href="tel:+375172844511" class="footer__dd-link"><img src="./img/operator4.png">+375 (17) 284-45-11</a>
+                            <a href="tel:+375291101212" class="footer__dd-link"><img src="/dentko/img/operator1.png">+375 (29) 110-12-12</a>
+                            <a href="tel:+375336601313" class="footer__dd-link"><img src="/dentko/img/operator2.png">+375 (33) 660-13-13</a>
+                            <a href="tel:+375251101212" class="footer__dd-link"><img src="/dentko/img/operator3.png">+375 (25) 110-12-12</a>
+                            <a href="tel:+375172844511" class="footer__dd-link"><img src="/dentko/img/operator4.png">+375 (17) 284-45-11</a>
                         </div>
                     </div>
                     <div class="about__btn-wrap appointment__btn-wrap">
-                        <button class="uk-button uk-button-default button about__btn appointment__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                        <button class="uk-button uk-button-default button about__btn appointment__btn popup-request-open">Записаться на прием <img src="/dentko/img/inline-arrow-w.svg"></button>
                     </div>
                 </div>
             </div>
@@ -245,7 +245,7 @@
                     <p class="uk-text-meta">Пожалуйста, проверьте правильность введенных данных.</p>
                     <form class="uk-flex uk-flex-bottom">
                         <div class="form__inputs">
-                            <div class="uk-flex uk-flex-between form__row">
+                            <div class="uk-flex uk-flex-top uk-flex-between form__row">
                                 <div class="uk-input form__rate-wrap">
                                     <span class="form__rate-span">Ваша оценка:</span>
                                     <div class="form__rate">
@@ -369,7 +369,7 @@
     <div class="popup__wrapper popup-request">
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
-            <div class="popup__body">
+            <form class="popup__body">
                 <h2 class="uk-h1">Записаться на прием</h2>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
@@ -399,7 +399,7 @@
                 <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
                     <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="/dentko/img/inline-arrow-w.svg"></button>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
     <div class="popup__wrapper popup-sucsess">
