--- a/red_button/index.html
+++ b/red_button/index.html
@@ -32,9 +32,7 @@
             </div>
         </div>
     </header>
-    <div class="mobile menu">
-        
-    </div>
+    <div class="mobile menu"></div>
     <main class="main">
         <section class="banner">
             <img src="./img/banner_bg1.png" alt="" class="banner__bg1">
